--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "gradio>=6.5.1",
     "numpy>=2.4.2",
     "opencv-python>=4.13.0.90",
 ]
